LPD-X Allow graceful security manager fallback